# snes9x

./: .cirrus.yml  .gitignore  .gitmodules  .travis.yml  65c816.h  LICENSE  README.md  appveyor.yml  bml.cpp  bml.h  bsx.cpp  bsx.h  c4.cpp  c4.h  c4emu.cpp  cheats.cpp  cheats.h  cheats2.cpp  clip.cpp  compat.cpp  conffile.cpp  conffile.h  controls.cpp  controls.h  cpu.cpp  cpuaddr.h  cpuexec.cpp  cpuexec.h  cpumacro.h  cpuops.cpp  cpuops.h  crosshairs.cpp  crosshairs.h  debug.cpp  debug.h  display.h  dma.cpp  dma.h  dsp.cpp  dsp.h  (+86 more)
apu/: SNES_SPC.cpp  SNES_SPC.h  SNES_SPC_misc.cpp  SPC_CPU.h  SPC_DSP.cpp  SPC_DSP.h  apu.cpp  apu.h  hermite_resampler.h  resampler.h  ring_buffer.h
data/: cheats.bml
debian/: autoreconf  changelog  clean  control  copyright  rules  snes9x-x.README.debian  snes9x-x.docs  snes9x-x.install  snes9x-x.manpages  snes9x.1  watch
docs/: changes.txt  control-inputs.txt  controls.txt  porting.html  portsofsnes9x.txt  snes9x-license.txt  snes9x.conf.default
filter/: 2xsai.cpp  2xsai.h  blit.cpp  blit.h  epx.cpp  epx.h  filter_bicubic_win.cpp  filter_bicubic_win.h  filter_lanczos.cpp  filter_lanczos.h  filter_sharpbilinear_flexible.cpp  filter_sharpbilinear_flexible.h  hq2x.cpp  hq2x.h  sharpbilinear_flexible.cpp  sharpbilinear_flexible.h  snes_ntsc.c  snes_ntsc.h  snes_ntsc_config.h  snes_ntsc_impl.h  xbrz.cpp  xbrz.h  xbrz_tools.h
frontend-common/: wayland_egl_context.hpp
gtk/: AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac  external  meson.build  meson_options.txt
gtk/data/: Makefile.am  Makefile.in  meson.build  snes9x-gtk.desktop  snes9x.desktop
gtk/doc/: LICENSE  README
gtk/po/: LINGUAS  Makefile.in.in  Makevars  POTFILES.in  README.md  TRANSLATING.txt  de.po  es.po  es_VE.po  fr_FR.po  ja.po  ka.po  meson.build  pl.po  pt_BR.po  ru.po  snes9x-gtk.pot  sr@latin.po  sv.po  uk.po  updatepot.sh  zh_CN.po
gtk/scripts/: makeappimage.sh  makeappimage_32-bit.sh
gtk/src/: background_particles.cpp  background_particles.h  filter_epx_unsafe.cpp  filter_epx_unsafe.h  filter_xbrz.cpp  filter_xbrz.h  fractional-scale-v1.c  fractional-scale-v1.h  gtk_2_3_compat.h  gtk_binding.cpp  gtk_binding.h  gtk_builder_window.cpp  gtk_builder_window.h  gtk_cheat.cpp  gtk_cheat.h  gtk_compat.h  gtk_config.cpp  gtk_config.h  gtk_control.cpp  gtk_control.h  gtk_display.cpp  gtk_display.h  gtk_display_driver.h  gtk_display_driver_gtk.cpp  gtk_display_driver_gtk.h  gtk_display_driver_opengl.cpp  gtk_display_driver_opengl.h  gtk_display_driver_vulkan.cpp  gtk_display_driver_vulkan.h  gtk_display_driver_xv.cpp  gtk_display_driver_xv.h  gtk_file.cpp  gtk_file.h  gtk_glade_window.cpp  gtk_glade_window.h  gtk_glx_context.cpp  gtk_glx_context.h  gtk_icon.h  gtk_netplay.cpp  gtk_netplay.h  (+44 more)
gtk/src/Cg/: CCGShader.cpp  CCGShader.h  CGLCG.cpp  CGLCG.h  cgFunctions.cpp  cgMini.h
gtk/src/shaders/: CGLCG.cpp  CGLCG.h  cgFunctions.cpp  cgFunctions.h  cgMini.h  glsl.cpp  glsl.h  shader_helpers.cpp  shader_helpers.h  shader_platform.h
i386/: c4.asm  fxemu2.asm  fxemu2.mac  fxemu2b.asm  fxemu2b.mac  fxemu2c.asm  fxemu2c.mac  fxtable.asm  macros.mac  regs.mac  regsw.mac  sfxproc.asm  zsnes.asm  zsnesc4.asm
jma/: crc32.cpp  crc32.h  jma.cpp  jma.h  s9x-jma.cpp  s9x-jma.h
libretro/: Directory.Build.targets.xp  Makefile  Makefile.common  Tupfile  fir_lut.h  libretro-win32.vcproj  libretro-win32.vcxproj  libretro-win32.vcxproj.filters  libretro.cpp  libretro.def  libretro.h  libretro_core_options.h  libretro_core_options_intl.h
libsnes/: Makefile  libsnes-win32.vcproj  libsnes.cpp  libsnes.def  libsnes.hpp
macosx/: .gitignore  HID_Utilities_External.h  Info.plist  Info_i386.plist  Info_ppc.plist  gtk_sound.cpp  gtk_sound.h  mac-appleevent.cpp  mac-appleevent.h  mac-appleevent.mm  mac-audio.cpp  mac-audio.h  mac-audio.mm  mac-cart.cpp  mac-cart.h  mac-cart.mm  mac-cheat.cpp  mac-cheat.h  mac-cheat.mm  mac-cheatfinder.cpp  mac-cheatfinder.h  mac-cheatfinder.mm  mac-client.cpp  mac-client.h  mac-client.mm  mac-cocoatools.h  mac-cocoatools.mm  mac-controls.cpp  mac-controls.h  mac-controls.mm  mac-coreimage.h  mac-coreimage.mm  mac-dialog.cpp  mac-dialog.h  mac-dialog.mm  mac-file.cpp  mac-file.h  mac-file.mm  mac-global_prefix.h  mac-gworld.cpp  (+42 more)
ppc/: altivec.h
qt/: CMakeLists.txt  QtStaticBuildVars.txt
qt/scripts/: cmake-qt-base.sh  cmake-qt-other.sh  cmake-qt-tools.sh
qt/src/: BindingPanel.cpp  BindingPanel.hpp  CheatsDialog.cpp  CheatsDialog.hpp  CheatsDialog.ui  ControllerPanel.cpp  ControllerPanel.hpp  ControllerPanel.ui  DisplayPanel.cpp  DisplayPanel.hpp  DisplayPanel.ui  EmuApplication.cpp  EmuApplication.hpp  EmuBinding.cpp  EmuBinding.hpp  EmuCanvas.cpp  EmuCanvas.hpp  EmuCanvasGLX.cpp  EmuCanvasOpenGL.cpp  EmuCanvasOpenGL.hpp  EmuCanvasQt.cpp  EmuCanvasQt.hpp  EmuCanvasVulkan.cpp  EmuCanvasVulkan.hpp  EmuConfig.cpp  EmuConfig.hpp  EmuInputPanel.cpp  EmuInputPanel.hpp  EmuMainWindow.cpp  EmuMainWindow.hpp  EmuSettingsWindow.cpp  EmuSettingsWindow.hpp  EmuSettingsWindow.ui  EmulationPanel.cpp  EmulationPanel.hpp  EmulationPanel.ui  FoldersPanel.cpp  FoldersPanel.hpp  FoldersPanel.ui  GeneralPanel.cpp  (+22 more)
qt/src/resources/: snes9x-qt.exe.manifest  snes9x.qrc  snes9x_icon.rc  snes9x_win32.rc  untitled.ui
sdl/: .sdlvideo.cpp.swp  CREDITS  Makefile.in  configure  configure.ac  sdl_snes9x.h  sdlaudio.cpp  sdlinput.cpp  sdlmain.cpp  sdlvideo.cpp
shaders/: CGLCG.cpp  cgMini.h  glsl.cpp  glsl.h  shader_helpers.cpp  shader_helpers.h  shader_platform.h  slang.cpp
unix/: Makefile.in  aclocal.m4  configure  configure.ac  snes9x.conf.default  unix.cpp  x11.cpp
unix/docs/: readme_unix.html
unzip/: crypt.h  ioapi.h  miniunz.c  unzip.c  zip.c
vulkan/: slang_helpers.cpp  slang_preset.cpp  slang_preset.hpp  slang_preset_ini.cpp  slang_preset_ini.hpp  slang_preset_test.cpp  slang_shader.cpp  slang_shader.hpp  std_chrono_throttle.cpp  std_chrono_throttle.hpp  test.cpp  vk2d.cpp  vk2d.hpp  vk_mem_alloc_implementation.cpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_hpp_storage.cpp  vulkan_hpp_wrapper.hpp  (+11 more)
win32/: CD3DCG.h  (+96 more)
(+261 files in other folders)
